--- a/esm206-lab7.Rmd
+++ b/esm206-lab7.Rmd
@@ -27,4 +27,113 @@ Use the `GGally::ggpairs()` function to create a pairs plot.
 ggpairs(penguins)
 ```
 
+Can select groups of columns using the colon
+
+```{r}
+# to create a group of graphs for all the selected variables
+penguins %>% 
+  select(species, bill_length_mm:body_mass_g) %>% 
+  ggpairs(aes(color = species)) +
+  theme_classic()
+
+# really important to look at your data to know what variables need to be included
+ggplot(data = penguins, aes(x = bill_depth_mm, y = body_mass_g, group = species)) +
+  geom_point(aes(color = species)) +
+  theme_classic() +
+  geom_smooth(method = "lm")
+```
+
+### Multiple linear regression - penguins
+
+Use multiple linear regression to try to understand the relationship between multiple predictor variables and a single continuous outcome variable (body mass). 
+
+```{r}
+penguin_lm <- lm(body_mass_g ~ flipper_length_mm + bill_depth_mm, data = penguins)
+
+# return just the coefficients:
+penguin_lm
+```
+
+How would you interpret coefficient for flipper length?
+
+If all other factors were constant, on average for every 1 mm increase in flipper length, the body mass would increase by 51.54g. 
+
+ALWAYS USE IN-LINE CODE REFERENCING - DONT HAND TYPE NUMBERS INTO REPORT.
+
+Use `summary()` function to get more information:
+
+```{r}
+summary(penguin_lm)
+```
+
+p-value alone should not be grounds for removing or adding a variable from the model
+final p-value says the model is doing better (significantly) than random chance
+
+information presented on model fit. for multiple linear regression, use adjusted R-squared value, because more variables usually will raise the R-squared artificially
+
+What does Adj R-sq mean?
+
+The model explains 75.96% of the variance for the penguin body weight. (remember not good or bad, just an explanation of the variance) 
+
+### Use `broom()` functions tidy and glance for more info
+
+Use `broom::tidy()` to get the coefficient summary in a data frame.
+Use `broom::glance()` to get the model summary in a data frame.
+
+```{r}
+penguin_lm_tidy <- tidy(penguin_lm)
+penguin_lm_tidy
+```
+
+Try using in-line code to refer to bill depth coefficient.
+
+USE IN-LINE CODE TO REFERENCE:
+The penguin bill depth coefficient is `r round(penguin_lm_tidy$estimate[3], 2)` 
+
+
+```{r}
+penguin_lm_glance <- glance(penguin_lm)
+penguin_lm_glance
+```
+
+In-line code to output adjusted R-squared:
+`r round(penguin_lm_glance$adj.r.squared, 3)`
+
+## Try another model
+
+We have thought really hard, done a literature review, consulted with experts, deeply explored data, and decided that the three most critical variables to include in this model are (with body mass as the dependent variable):
+
+- flipper length
+- species
+- sex
+
+Task: create a multiple linear regression model using those three variables
+Then take a look at the model outputs and interpret the coefficients
+
+```{r}
+penguin_lm2 <- lm(body_mass_g ~ flipper_length_mm + species + sex, data = penguins)
+
+summary(penguin_lm2)
+```
+
+Output means that reference level for species is Adelie and sex is female. 
+
+Check out lab6 for equatiomatic to get the equation output.
+
+**HOW TO INTERPRET:**
+If everything else is constant, on average for every Chinstrap penguin, we expect the body mass to be 87.6 g smaller than an Adelie penguin. 
+
+If everything else is constant, on average male penguins are 530.4 g more than a female penguin.
+
+body mass of male adelie penguin, 200 mm flippers = 
+mass(g) = -365.82 + 20.02(200) + 530.38(1)
+
+### Use `broom::augment()` to see predicted values
+
+```{r}
+augment(penguin_lm2)
+
+```
+
+
 
